added menu screen

--- a/my-app/src/pages/Playground/Playground.css
+++ b/my-app/src/pages/Playground/Playground.css
@@ -4,8 +4,8 @@
     margin: 1%;
     padding: 1%;
     border-radius: 2px;
-    overflow: auto;
     min-height: 200px;
     min-width: 100%;
     justify-content: center;
+    overflow: scroll;
 }
