--- a/my-app/src/styles/global.css
+++ b/my-app/src/styles/global.css
@@ -2,4 +2,7 @@
     background-color: whitesmoke;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: scroll;
 }
