--- a/my-app/src/components/NavBar/NavBar.css
+++ b/my-app/src/components/NavBar/NavBar.css
@@ -20,6 +20,11 @@
 
 .navbar-item {
   margin: 0;
+  padding: 1rem;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 3vh;
 }
 
 .navbar-link {
