--- a/my-app/src/styles/global.css
+++ b/my-app/src/styles/global.css
@@ -4,5 +4,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: scroll;
+    overflow: auto;
+    padding: 1%;
 }
