--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -5,10 +5,12 @@
 
 html, body {
   height: 100%;
+  width: 100%;
 }
 
 html{
-  background-image: url('./assets/background.jpg');
+  /* background-image: url('./assets/background.jpg'); */
+  background-color: gray;
 }
 
 .app-wrapper{
