--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -5,14 +5,17 @@
 
 html, body {
   height: 100%;
+  width: 100%;
 }
 
 html{
-  background-image: url('./assets/background.jpg');
+  /* background-image: url('./assets/background.jpg'); */
+  background-color: gray;
 }
 
 .app-wrapper{
   justify-content: center;
   height: 95vh;
   display: flex;
+  margin-top: 5rem;
 }
