--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -10,7 +10,7 @@ html, body {
 
 html{
   /* background-image: url('./assets/background.jpg'); */
-  background-color: gray;
+  background-color: whitesmoke;
 }
 
 .app-wrapper{
