--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -15,7 +15,8 @@ html{
 
 .app-wrapper{
   justify-content: center;
-  height: 95vh;
   display: flex;
-  margin-top: 5rem;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 0;
 }
