--- a/my-app/src/components/NavBar/NavBar.css
+++ b/my-app/src/components/NavBar/NavBar.css
@@ -1,9 +1,13 @@
 /* src/components/NavBar/NavBar.css */
 .navbar {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
+  right: 0;
   width: 100%;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
   background-color: #333;
   color: white;
   padding: 10px 0;
@@ -64,7 +68,7 @@
 /* Navbar items */
 .navbar-item {
   margin: 0;
-  padding: 1rem;
+  padding: 10px;
   display: flex;
   align-items: center;
 }
@@ -106,4 +110,9 @@
   .brand-item{
     display: none;
   }
+}
+
+.brand-item{
+  width: 70%;
+  height: auto;
 }
