--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -35,4 +35,61 @@
   .description {
     text-align: left !important;
   }
-  
+
+/* Footer.css */
+.footer {
+  background-color: #333; /* Dark background */
+  color: #fff; /* White text */
+  padding: 1rem 0; /* Padding around the footer */
+  text-align: center; /* Center text */
+  left: 0; /* Align to the left */
+    right: 0; /* Align to the right */
+    bottom: 0;
+  width: 100vw; /* Full width */
+  height: 5rem;
+}
+
+.footer-content {
+  max-width: 1200px; /* Max width for content */
+  margin: 0 auto; /* Center content */
+}
+
+.socials {
+  margin-top: 0.5rem; /* Spacing above social links */
+}
+
+.socials a {
+  color: #fff; /* White text for links */
+  margin: 0 1rem; /* Spacing between links */
+  text-decoration: none; /* Remove underline */
+}
+
+.socials a:hover {
+  text-decoration: underline; /* Underline on hover */
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* Two equal columns */
+  align-items: center;
+  width: 80%;
+  gap: 1rem;
+}
+
+/* Skill container for each skill */
+.skill-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly; 
+}
+
+/* Image styling */
+.skill-image {
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
