--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -1,40 +1,40 @@
 /* Container that holds the about section */
 .about {
-    display: flex;
-    flex-direction: row; /* Arrange items horizontally */
-    align-items: left;
-    text-align: left;
-    width: 100%;
-  }
-  
-  /* Grid container for the layout */
+  display: flex;
+  flex-direction: row; /* Arrange items horizontally */
+  align-items: left;
+  text-align: left;
+  width: 100%;
+}
+
+/* Grid container for the layout */
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* 2 columns */
+  width: 80%;
+  height: 80%;
+  margin: auto;
+}
+
+/* Styling for each grid item */
+.grid-item {
+  color: black;
+  text-align: center;
+  justify-content: center;
+  padding: 1rem;
+}
+
+/* Media query for responsive behavior */
+@media (max-width: 1000px) {
   .grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr; /* 2 columns */
-    width: 80%;
-    height: 80%;
-    margin: auto;
+    grid-template-columns: 1fr; /* Stack items in 1 column */
   }
-  
-  /* Styling for each grid item */
-  .grid-item {
-    color: black;
-    text-align: center;
-    justify-content: center;
-    padding: 1rem;
-  }
-  
-  /* Media query for responsive behavior */
-  @media (max-width: 1000px) {
-    .grid-container {
-      grid-template-columns: 1fr; /* Stack items in 1 column */
-    }
-  }
-  
-  /* Description text style */
-  .description {
-    text-align: left !important;
-  }
+}
+
+/* Description text style */
+.description {
+  text-align: left !important;
+}
 
 /* Footer.css */
 .footer {
@@ -43,8 +43,8 @@
   padding: 1rem 0; /* Padding around the footer */
   text-align: center; /* Center text */
   left: 0; /* Align to the left */
-    right: 0; /* Align to the right */
-    bottom: 0;
+  right: 0; /* Align to the right */
+  bottom: 0;
   width: 100vw; /* Full width */
   height: 5rem;
 }
@@ -80,7 +80,7 @@
 .skill-container {
   display: flex;
   align-items: center;
-  justify-content: space-evenly; 
+  justify-content: space-evenly;
 }
 
 /* Image styling */
@@ -92,4 +92,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.social-media-grid {
+  margin-top: 5px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 2 columns */
+  gap: 5px; /* Space between grid items */
+  padding: 5px; /* Padding around the grid */
 }
