--- a/my-app/src/styles/global.css
+++ b/my-app/src/styles/global.css
@@ -5,8 +5,19 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    margin-bottom: 2rem;
     padding-bottom: 2rem;
     height: 100%;
+    width: 100%;
+}
+
+.blank{
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    padding-bottom: 2rem;
+    height: 100vh;
     width: 100%;
 }
