--- a/my-app/src/styles/global.css
+++ b/my-app/src/styles/global.css
@@ -6,7 +6,8 @@
     align-items: center;
     overflow: hidden;
     padding-bottom: 2rem;
-    height: 100%;
+    margin-top: 4rem;
+    height: fit-content;
     width: 100%;
 }
 
