--- a/my-app/src/components/NavBar/NavBar.css
+++ b/my-app/src/components/NavBar/NavBar.css
@@ -4,8 +4,8 @@
   top: 0;
   left: 0;
   right: 0;
-  width: 100%;
-  height: 50px;
+  width: 100wh;
+  height: auto;
   align-items: center;
   justify-content: center;
   background-color: #333;
@@ -52,6 +52,7 @@
   color: white;
   cursor: pointer;
   display: none; /* Hidden by default (only shown in mobile view) */
+  justify-content: space-between;
 }
 .navbar-toggle:active,
 .navbar-toggle:focus {
