--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -6,11 +6,13 @@
 html, body {
   height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 html{
   /* background-image: url('./assets/background.jpg'); */
-  background-color: gray;
+  background-color: whitesmoke;
 }
 
 .app-wrapper{
