--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -11,18 +11,19 @@
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr; /* 2 columns */
-  width: 80%;
-  height: 80%;
   margin: auto;
+  width: 80%;
 }
 
 /* Styling for each grid item */
 .grid-item {
   color: black;
-  text-align: center;
+  margin: auto;
+  align-self: center;
+  justify-self: center;
+  padding: 1rem;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
 }
 
 /* Media query for responsive behavior */
@@ -32,7 +33,7 @@
     justify-content: center;
     align-items: center; /* Stack items in 1 column */
   }
-  .grid-item{
+  .grid-item {
     justify-content: center;
     align-items: center;
   }
@@ -79,8 +80,9 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr); /* Two equal columns */
   align-items: center;
-  width: 80%;
-  gap: 1rem;
+  align-self: center;
+  justify-self: center;
+  gap: 4rem;
 }
 
 /* Skill container for each skill */
@@ -112,6 +114,8 @@
   padding: 5px; /* Padding around the grid */
 }
 .svg-container {
+  width: 100px;
+  height: 100px;
   display: flex;
   justify-content: center; /* Centers horizontally */
   align-items: center;
@@ -152,38 +156,36 @@
 
 .confetti-container {
   height: 10px;
-  width: 100%;
-  display: block;
 }
 
 .confetti {
+  display: flex;
   width: 10px;
   height: 10px;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
   border-radius: 50%;
-  overflow: hidden;
-  animation: fall 2s linear infinite, sway 5s ease-in-out infinite alternate; /* Both animations */
-}
-
-@keyframes fall {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(300px);
-  }
-  100% {
-    transform: translateY(600px);
-  }
+  object-fit: contain;
+  animation: sway 5s infinite alternate; /* Both animations */
 }
 
 @keyframes sway {
   0% {
-    transform: translateX(0);
+    transform: translateX(-100%);
   }
-  50%{
-    transform: translateX(250px)
-  }
-  100%{
-    transform: translateX(600px)
+  100% {
+    transform: translateX(500px);
   }
 }
+
+.pikachu {
+  list-style: none;
+  background: url('../../assets/pikachu.gif') no-repeat left center; /* Use background instead of list-style */
+  background-size: 20px 20px; /* Adjust the size of the GIF */
+  padding-left: 25px; /* Adjust for the background image size */
+  font-size: 0.8em; /* Adjusts the size of the text */
+  margin: 5px; /* Adjusts the space outside the list item */
+}
+
+
