--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -34,6 +34,7 @@
     align-items: center; /* Stack items in 1 column */
   }
   .grid-item {
+    width: 80%;
     justify-content: center;
     align-items: center;
   }
@@ -48,7 +49,6 @@
 .footer {
   background-color: #333; /* Dark background */
   color: #fff; /* White text */
-  padding: 1rem 0; /* Padding around the footer */
   text-align: center; /* Center text */
   left: 0; /* Align to the left */
   right: 0; /* Align to the right */
