--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -26,6 +26,46 @@
   justify-content: center;
 }
 
+.instax {
+  position: relative;
+  width: 100%;
+  max-height: 600px;
+  max-width: 800px;
+  margin: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  background-color:aliceblue;
+}
+.slide {
+  margin-bottom: 50px;
+  width: 85%;
+  max-width: 300px;
+  min-height: 400px;
+  height: 400px;
+  object-fit: contain;
+  transition: opacity 0.5s ease-in-out;
+}
+.prev, .next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+.prev {
+  left: 10px;
+}
+.next {
+  right: 10px;
+}
+.prev:hover, .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
 /* Media query for responsive behavior */
 @media (max-width: 1000px) {
   .grid-container {
