--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -250,7 +250,7 @@
 }
 
 .contact-form {
-  background-image: url("../../assets/background.jpg");
+  background-color: #1DB1AE;
   width: 100%;
   justify-content: center;
   align-items: center;
