--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -148,9 +148,9 @@
 
 /* Skill container for each skill */
 .skill-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+  justify-items: center;
+  position: relative;
+  
 }
 
 /* Image styling */
@@ -158,7 +158,6 @@
   width: 100px;
   height: 100px;
   object-fit: contain;
-  margin-left: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -250,6 +249,8 @@
 }
 
 .contact-form {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   background-color: #1DB1AE;
   width: 100%;
   justify-content: center;
@@ -290,4 +291,26 @@
     padding: 2rem;
     border-radius: 10px;
   }
+}
+
+.skill-container:hover .tooltiptext{
+  visibility: visible;
+}
+
+.skill-container:hover {
+  transform: scale(1.05);
+}
+
+/* Tooltip text */
+.skill-container .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  justify-self: center;
+  
+  bottom: 100%; /* Use half of the width (120/2 = 60), to center the tooltip */
 }
