--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -1,11 +1,5 @@
 /* Container that holds the about section */
-.about {
-  display: flex;
-  flex-direction: row; /* Arrange items horizontally */
-  align-items: left;
-  text-align: left;
-  width: 100%;
-}
+
 
 /* Grid container for the layout */
 .grid-container {
@@ -211,31 +205,7 @@
   }
   100% {
     transform: translate(400px);
-  }
-}
-
-.confetti-container {
-  height: 10px;
-}
-
-.confetti {
-  display: flex;
-  width: 10px;
-  height: 10px;
-  justify-content: center;
-  align-self: center;
-  align-items: center;
-  border-radius: 50%;
-  object-fit: contain;
-  animation: sway 5s infinite alternate; /* Both animations */
-}
-
-@keyframes sway {
-  0% {
-    transform: translateX(-100%);
-  }
-  100% {
-    transform: translateX(500px);
+    
   }
 }
 
@@ -313,4 +283,32 @@
   justify-self: center;
   
   bottom: 100%; /* Use half of the width (120/2 = 60), to center the tooltip */
+}
+.about {
+  width: max-content;
+  /* grid-template-columns: auto;Aligns content to the start (left) */
+}
+
+.about h2{
+  display: inline-block;
+  text-align: left;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0;/* Gives that scrolling effect as the typing happens */
+  /* width: min-content !important; */
+  animation: 
+    typing 3.5s steps(50, end) ,
+    blink-caret .75s step-end infinite;
+}
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: black; }
 }
