--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -1,6 +1,5 @@
 /* Container that holds the about section */
 
-
 /* Grid container for the layout */
 .grid-container {
   display: grid;
@@ -9,22 +8,26 @@
   width: 80%;
 }
 
+.grid-container.about-me{
+}
+
 /* Styling for each grid item */
 .grid-item {
   color: black;
   margin: auto;
   align-self: center;
   justify-self: center;
-  padding: 1rem;
   align-items: center;
   justify-content: center;
+  align-content: center;
+  width: 100%;
 }
 
 .instax {
   position: relative;
   width: 100%;
   max-height: 600px;
-  max-width: 800px;
+  max-width: 300px;
   margin: auto;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -63,39 +66,6 @@
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-/* Media query for responsive behavior */
-@media (max-width: 1000px) {
-  .grid-container {
-    grid-template-columns: 1fr;
-    justify-content: center;
-    align-items: center; /* Stack items in 1 column */
-  }
-  .grid-item {
-    margin: 1vh;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    overflow: hidden;
-  }
-  .logo {
-    display: flex;
-    justify-content: center;
-  }
-  .social-media-grid {
-    display: grid !important;
-    place-items: center !important; /* Centers items in both axes */
-    text-align: center !important;
-    gap: 5px !important;
-    padding: 5px !important;
-    grid-template-columns: repeat(2, 1fr) !important;
-  }
-  .confetti-container {
-    visibility: hidden;
-  }
-}
-
-/* Description text style */
 .description {
   text-align: left !important;
 }
@@ -133,18 +103,18 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Two equal columns */
-  align-items: center;
-  align-self: center;
-  justify-self: center;
-  gap: 4rem;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  gap: 1rem;
+  width: 100%;
+  margin: auto;
 }
 
 /* Skill container for each skill */
 .skill-container {
   justify-items: center;
   position: relative;
-  
+  margin: auto;
+  height: 100px;
 }
 
 /* Image styling */
@@ -205,23 +175,22 @@
   }
   100% {
     transform: translate(400px);
-    
   }
 }
 
 .pikachu {
-  list-style: none;
-  background: url("../../assets/pikachu.gif") no-repeat left center; /* Use background instead of list-style */
-  background-size: 20px 20px; /* Adjust the size of the GIF */
+  /* list-style: none; */
+  /* background: url("../../assets/pikachu.gif") no-repeat left center; 
+  background-size: 20px 20px;  */
   padding-left: 25px; /* Adjust for the background image size */
-  font-size: 0.8em; /* Adjusts the size of the text */
+  font-size: 1em; /* Adjusts the size of the text */
   margin: 5px; /* Adjusts the space outside the list item */
 }
 
 .contact-form {
   padding-top: 3rem;
   padding-bottom: 3rem;
-  background-color: #1DB1AE;
+  background-color: #1db1ae;
   width: 100%;
   justify-content: center;
   align-items: center;
@@ -233,9 +202,9 @@
   width: 500px;
   margin: auto;
   padding: 2rem;
-  word-wrap: break-word;  /* Helps break long words */
+  word-wrap: break-word; /* Helps break long words */
   overflow-wrap: break-word; /* Ensures words break across lines if too long */
-  white-space: normal; 
+  white-space: normal;
   background-color: aliceblue;
   justify-content: center;
   align-items: center;
@@ -243,32 +212,32 @@
   border-radius: 10px;
   overflow: hidden;
 }
-.intro p{
+.intro p {
   text-align: left;
   padding: 10px;
   line-height: 1.5;
   word-wrap: break-word;
   overflow-wrap: break-word;
-  white-space: normal; 
+  white-space: normal;
 }
-.intro h2{
+.intro h2 {
   padding: 10px;
 }
 @media screen and (max-width: 768px) {
   .intro {
-    max-width: 300px !important; 
+    max-width: 300px !important;
     margin: 2rem;
     padding: 2rem;
     border-radius: 10px;
   }
 }
 
-.skill-container:hover .tooltiptext{
+.skill-container:hover .tooltiptext {
   visibility: visible;
 }
 
 .skill-container:hover {
-  transform: scale(1.05);
+  transform: scale(1.25);
 }
 
 /* Tooltip text */
@@ -281,7 +250,8 @@
   border-radius: 6px;
   padding: 5px;
   justify-self: center;
-  
+  align-content: center;
+  position: absolute;
   bottom: 100%; /* Use half of the width (120/2 = 60), to center the tooltip */
 }
 .about {
@@ -289,26 +259,87 @@
   /* grid-template-columns: auto;Aligns content to the start (left) */
 }
 
-.about h2{
+.about h2 {
   display: inline-block;
   text-align: left;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
+  border-right: 0.15em solid orange; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0;/* Gives that scrolling effect as the typing happens */
+  margin: 0; /* Gives that scrolling effect as the typing happens */
   /* width: min-content !important; */
-  animation: 
-    typing 3.5s steps(50, end) ,
-    blink-caret .75s step-end infinite;
+  animation: typing 3.5s steps(50, end), blink-caret 0.75s step-end infinite;
 }
 /* The typing effect */
 @keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
 
 /* The typewriter cursor effect */
 @keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: black; }
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: black;
+  }
+}
+
+.grid-container.skills {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Media query for responsive behavior */
+@media (max-width: 1000px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center; /* Stack items in 1 column */
+  }
+  .grid-item {
+    margin: 1vh;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    overflow: hidden;
+  }
+  .logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+  }
+  .social-media-grid {
+    display: grid !important;
+    place-items: center !important; /* Centers items in both axes */
+    text-align: center !important;
+    gap: 5px !important;
+    padding: 5px !important;
+    grid-template-columns: repeat(2, 1fr) !important;
+  }
+  .confetti-container {
+    visibility: hidden;
+  }
+  .grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.section {
+  padding-top: 2rem;
+  width: 100%;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
 }
