--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -8,7 +8,7 @@
   width: 80%;
 }
 
-.grid-container.about-me{
+.grid-container.about-me {
 }
 
 /* Styling for each grid item */
@@ -195,13 +195,14 @@
   justify-content: center;
   align-items: center;
   align-self: center;
+  align-content: center;
   overflow: hidden;
 }
 
 .intro {
   width: 500px;
-  margin: auto;
   padding: 2rem;
+  margin: auto;
   word-wrap: break-word; /* Helps break long words */
   overflow-wrap: break-word; /* Ensures words break across lines if too long */
   white-space: normal;
@@ -223,11 +224,14 @@
 .intro h2 {
   padding: 10px;
 }
-@media screen and (max-width: 768px) {
+@media (max-width: 1000px) {
   .intro {
-    max-width: 300px !important;
-    margin: 2rem;
+    justify-content: center;
+    align-items: center;
+    background-color: aliceblue;
+    display: grid;
     padding: 2rem;
+    width: 500px;
     border-radius: 10px;
   }
 }
