--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -297,8 +297,22 @@
   flex-direction: column;
 }
 
+
+.formy{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-color: aliceblue;
+  width: 80%;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
+  margin: auto;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
 /* Media query for responsive behavior */
-@media (max-width: 1000px) {
+@media (max-width: 1400px) {
   .grid-container {
     grid-template-columns: 1fr;
     justify-content: center;
@@ -332,6 +346,17 @@
   .grid {
     grid-template-columns: 1fr 1fr;
   }
+  .formy{
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-self: center;
+    align-items: center;
+    margin: auto;
+    width: 90%;
+    overflow: hidden;
+  }
+  
 }
 
 .section {
@@ -345,3 +370,4 @@
   align-items: center;
   align-self: center;
 }
+
