--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -2,6 +2,7 @@
 
 /* Grid container for the layout */
 .grid-container {
+  padding-top: 2rem;
   display: grid;
   grid-template-columns: 1fr 1fr; /* 2 columns */
   margin: auto;
@@ -11,7 +12,6 @@
 
 /* Styling for each grid item */
 .grid-item {
-  color: black;
   margin: auto;
   align-self: center;
   justify-self: center;
@@ -41,31 +41,10 @@
   object-fit: cover;
   transition: opacity 0.5s ease-in-out;
 }
-.prev,
-.next {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
-  border-radius: 50%;
-}
-.prev {
-  left: 10px;
-}
-.next {
-  right: 10px;
-}
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
 
 .description {
   text-align: left !important;
+  line-height: 1.6;
 }
 
 /* Footer.css */
@@ -186,25 +165,25 @@
 }
 
 .contact-form {
+
+  color: #E0E2E3;
   padding-top: 3rem;
   padding-bottom: 3rem;
-  background-color: #1db1ae;
   width: 100%;
   justify-content: center;
   align-items: center;
   align-self: center;
   align-content: center;
   overflow: hidden;
+  min-height: 800px;
 }
 
 .intro {
-  width: 500px;
   padding: 2rem;
   margin: auto;
   word-wrap: break-word; /* Helps break long words */
   overflow-wrap: break-word; /* Ensures words break across lines if too long */
   white-space: normal;
-  background-color: aliceblue;
   justify-content: center;
   align-items: center;
   align-self: center;
@@ -226,11 +205,24 @@
   .intro {
     justify-content: center;
     align-items: center;
-    background-color: aliceblue;
     display: grid;
-    padding: 2rem;
+    padding: 0 !important;
     width: 300px;
     border-radius: 10px;
+  }
+  .intro p {
+    text-align: left;
+    padding: 0px;
+    margin: 0px;
+    margin-top: 5px;
+    line-height: 1.5;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+  }
+  .intro h2{
+    padding: 0px;
+    margin: 0px;
   }
 }
 
@@ -246,7 +238,7 @@
 .skill-container .tooltiptext {
   visibility: hidden;
   width: 120px;
-  background-color: black;
+  background-color: gray;
   color: #fff;
   text-align: center;
   border-radius: 6px;
@@ -254,6 +246,8 @@
   justify-self: center;
   align-content: center;
   position: absolute;
+  left: -1rem;
+  margin-bottom: 10px;
   bottom: 100%; /* Use half of the width (120/2 = 60), to center the tooltip */
 }
 .about {
@@ -301,7 +295,6 @@
 .formy{
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: aliceblue;
   width: 80%;
   justify-content: center;
   align-self: center;
@@ -309,6 +302,7 @@
   margin: auto;
   overflow: hidden;
   border-radius: 10px;
+  min-height: 600px;
 }
 
 /* Media query for responsive behavior */
