--- a/my-app/src/pages/ContactForm/ContactForm.css
+++ b/my-app/src/pages/ContactForm/ContactForm.css
@@ -4,6 +4,7 @@
   margin: 10px;
   width: 500px;
   border-radius: 10px;
+  height: 500px;
 }
 .inputEmail{
   border-radius: 10px;
@@ -42,7 +43,7 @@
   padding: 12px 20px;
   text-decoration: none;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  
+  color: white;
   margin: 8px 0;
   cursor: pointer;
   width: 100%;
