--- a/my-app/src/pages/AboutMe/AboutMe.css
+++ b/my-app/src/pages/AboutMe/AboutMe.css
@@ -47,6 +47,7 @@
 }
 
 .description {
+  height: 70px;
   line-height: 1.5;
   margin: auto;
   padding: auto;
@@ -317,7 +318,7 @@
 }
 
 .grid-container.work{
-  height: 500px;
+  height: 300px;
 }
 
 
@@ -381,6 +382,14 @@
     width: 90%;
     overflow: hidden;
   }
+  .about-me{
+    height: 1000px;
+    gap: 0px 0px; /* 10px row gap, 20px column gap */
+  }
+  .skills{
+    padding: 0;
+    font-size: large;
+  }
   
 }
 
@@ -395,4 +404,9 @@
   justify-content: center;
   align-items: center;
   align-self: center;
+}
+
+.grid-item.aws p{
+  font-weight: 300;
+  line-height: 12px;
 }
