--- a/my-app/src/pages/ContactForm/ContactForm.css
+++ b/my-app/src/pages/ContactForm/ContactForm.css
@@ -39,7 +39,8 @@
 .sendButton {
   border-radius: 10px;
   border: none;
-  background-color: #4E8D9F;
+  
+  background-color: #2a3b84; /* Blue circle */
   padding: 12px 20px;
   text-decoration: none;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
