--- a/my-app/src/components/Carousel/SkillCarousel.css
+++ b/my-app/src/components/Carousel/SkillCarousel.css
@@ -14,6 +14,8 @@
 .tooltiptext {
     margin-top: 5px;
     font-size: 14px;
+    justify-content: center;
+    text-align: center;
   }
   
 .skill-container {
