--- a/my-app/src/pages/ContactForm/ContactForm.css
+++ b/my-app/src/pages/ContactForm/ContactForm.css
@@ -4,7 +4,7 @@
   margin: 10px;
   width: 500px;
   border-radius: 10px;
-  height: 500px;
+  height: 400px;
 }
 .inputEmail{
   border-radius: 10px;
@@ -14,7 +14,7 @@
   margin: 8px 0;
   box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.1); /* Slightly transparent background */
-  border: 2px solid black;
+  border: 1px solid black;
   color: whitesmoke;
   outline: none;
   letter-spacing: 1px;
@@ -28,7 +28,7 @@
   margin: 8px 0;
   box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.1); /* Slightly transparent background */
-  border: 2px solid black;
+  border: 1px solid black;
   color: white; /* Ensures text is white */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   letter-spacing: 1px;
@@ -55,6 +55,9 @@
   margin: auto;
 }
 
+.form-label{
+  font-size: medium;
+}
 
 @media (max-width: 1200px) {
   .gridly {
